--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,6 @@
       {%- endif -%}
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <script src="/assets/js/mode-switcher.js"></script>
+    <!--<script src="/assets/js/mode-switcher.js"></script>-->
     <script src="/assets/js/toc.js"></script>
   </header>
