Add comment regadring commenting

--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -12,6 +12,9 @@ layout: default
 {{ content }}
 
 
+
+<hr />
+<i>Please create an issue if you have a comment - and then I'll know I have to prioritize comment functionality</i>
 <script type="text/javascript">
     $(document).ready(function () {
         $('#toc').toc();
